--- a/css/medium.css
+++ b/css/medium.css
@@ -8,12 +8,12 @@ License: https://www.wowthemes.net/freebies-license/
 }
 
 a {
-    color: #00ab6b;
+    color: #69a8fa;
     transition: all 0.2s;
 }
 
 a:hover {
-    color: #038252;
+    color: #2b72ff;
     text-decoration: none;
 }
 
@@ -726,7 +726,7 @@ img {
     padding: 15px 0 0 0;
     text-align: center;
     margin-bottom: 0rem;
-    color: #999;
+    color: #2b72ff;
     border-top: 1px solid #ddd;
 }
 
